--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,26 +28,21 @@ jobs:
       run:
         shell: bash
         working-directory: ./terraform
+
     steps:
       - name: "Checkout Source code"
         uses: actions/checkout@v4
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
-        # with:
-        #   terraform_version: "1.6.3"
 
       - name: "Terraform Init"
-        id: init
-        working-directory: ./terraform
         run: terraform init -backend-config="bucket=${{ env.BUCKET_TF_STATE }}"
 
       - name: "Terraform format"
-        id: fmt
         run: terraform fmt -check
      
       - name: "Terraform validate"
-        id: validate
         run: terraform validate
       
       - name: "Terraform Plan"
@@ -61,5 +56,4 @@ jobs:
 
       - name: "Terraform Apply"
         if: github.ref == 'refs/heads/main'
-        working-directory: ./terraform
-        run: terraform apply -input=false tfplan
+        run: terraform apply -input=false planfile
