--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,8 +35,7 @@ jobs:
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: "1.6.3"
+        
 
       - name: "Terraform Init"
         run: terraform init -backend-config="bucket=${{ env.BUCKET_TF_STATE }}"
@@ -55,3 +54,23 @@ jobs:
       - name: "Terraform Plan status"
         if: steps.plan.outcome == 'failure'
         run: exit 1
+
+      - name: "Terraform Apply"
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -input=false -auto-approve -parallelism=1 planfile
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws-region: ${{ env.AWS_REGION }}
+     
+      - name: Get Kube config file
+        id: getconfig
+        if: steps.apple.outcome == 'success'
+        run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }} 
+
+      - name: Install Ingress controller
+        if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
+        run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
