--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,6 +35,9 @@ jobs:
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
+        with:
+           terraform_version: "1.6.3"
+
         
 
       - name: "Terraform Init"
